# DCIR_Tracker

./: CMakeLists.txt  vcap_main.cpp
data/: config.yml  training.yml
include/: OCR_Config.hh  OCR_Func.h  OCR_ImageInput.hh  OCR_ImageProcessor.hh  OCR_KNN.hh
src/: ImageInput.cpp  OCR_Config.cc  OCR_ImageInput.cc  OCR_ImageProcessor.cc  OCR_KNN.cc
